--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,10 @@
 @import '../styles/components/conversation.css';
 @import '../styles/components/history.css';
 @import '../styles/components/settings.css';
+@import '../styles/components/pricing.css';
 @import '../styles/components/rate-limit.css';
 @import '../styles/components/shiki.css';
+@import '../styles/components/homepage.css';
 
 /* Tailwind directives */
 /* stylelint-disable at-rule-no-unknown */
