--- a/styles/components/info.css
+++ b/styles/components/info.css
@@ -45,7 +45,8 @@
 
 .info-tab.active {
   background: var(--color-primary);
-  color: white;
+  color: var(--color-text);
+  /* border: 1px solid var(--color-primary); */
 }
 
 .info-content {
